--- a/public/index.html
+++ b/public/index.html
@@ -5,11 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>React From Scratch</title>
+    <link href="../dist/react-tooltip.css" rel="stylesheet" />
   </head>
   <body>
     <div id="root"></div>
 
     <!-- The bundle-name should be same as you defined in webpack config file -->
-    <script src="./bundle.js"></script>
+    <script src="../dist/bundle.js"></script>
   </body>
 </html>
